# PyCV-boilerplate

./: CMakeLists.txt  README.md
include/: cv2.hpp
pycv_example/: CMakeLists.txt  main.cpp
